--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ buildscript {
 }
 subprojects {
     group = 'com.nelly'
-    version = '0.0.1-SNAPSHOT'
+    version = '1.0-SNAPSHOT'
 
     apply plugin: 'java'
     apply plugin: 'org.springframework.boot'
@@ -33,6 +33,7 @@ subprojects {
     }
 
     dependencies {
+        implementation 'org.springframework.boot:spring-boot-starter'
         compileOnly 'org.projectlombok:lombok'
         developmentOnly 'org.springframework.boot:spring-boot-devtools'
         annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
