--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,17 @@
 rootProject.name = 'nelly-project'
-include 'application'
 include 'domain'
+include 'client'
+include 'modules'
+include 'application:g-app-application'
+include 'modules:g-app-redis'
+include 'modules:g-app-exception-handler'
+findProject(':modules:g-app-exception-handler')?.name = 'g-app-exception-handler'
+include 'client:g-app-core-web'
+findProject(':client:g-app-core-web')?.name = 'g-app-core-web'
+include 'domain:g-app-domain'
+findProject(':domain:g-app-domain')?.name = 'g-app-domain'
+include 'domain:g-app-auth-domain'
+findProject(':domain:g-app-auth-domain')?.name = 'g-app-auth-domain'
+include 'modules:g-app-token-util'
+findProject(':modules:g-app-token-util')?.name = 'g-app-token-util'
 
