--- a/application/g-app-application/build.gradle
+++ b/application/g-app-application/build.gradle
@@ -12,6 +12,7 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web:2.6.1'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation project(':client:g-app-core-web') // web 설정, security 적용
     implementation project(':domain:g-app-domain')  // rdbms domain
     implementation project(':domain:g-app-auth-domain') // security 사용 domain
