--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -9,3 +9,14 @@ bootJar {
 jar {
     enabled = true
 }
+
+subprojects {
+    bootJar {
+        enabled = false
+    }
+
+    jar {
+        enabled = true
+    }
+}
+
