--- a/modules/build.gradle
+++ b/modules/build.gradle
@@ -9,3 +9,13 @@ bootJar {
 jar {
     enabled = true
 }
+
+subprojects {
+    bootJar {
+        enabled = false
+    }
+
+    jar {
+        enabled = true
+    }
+}
