--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -45,7 +45,4 @@ jobs:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_S3_ACCESS_KEY }}
         AWS_S3_ACCESS_SECRET: ${{ secrets.AWS_S3_ACCESS_SECRET }}
       run: |
-          aws s3 cp \
-          --region ap-northeast-2 \
-          --acl private \ 
-	  ./g-app-build.zip s3://g-app/
+          aws s3 cp --region ap-northeast-2 --acl private ./g-app-build.zip s3://g-app/
