--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -43,6 +43,6 @@ jobs:
     - name: Deliver to AWS S3
       env: 
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_S3_ACCESS_KEY }}
-        AWS_S3_ACCESS_SECRET: ${{ secrets.AWS_S3_ACCESS_SECRET }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_S3_ACCESS_SECRET }}
       run: |
           aws s3 cp --region ap-northeast-2 --acl private ./g-app-build.zip s3://g-app/
