--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -46,3 +46,15 @@ jobs:
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_S3_ACCESS_SECRET }}
       run: |
           aws s3 cp --region ap-northeast-2 --acl private ./g-app-build.zip s3://g-app/
+    # Deploy
+    - name: Deploy
+      env: 
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_S3_ACCESS_KEY }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_S3_ACCESS_SECRET }}
+      run: |
+          aws deploy create-deployment \
+          --application-name springboot-intro \
+          --deployment-group-name springboot-intro-deploy-group \
+          --file-exists-behavior OVERWRITE \
+          --s3-location bucket=g-app,bundleType=zip,key=g-app-build.zip \
+          --region ap-northeast-2
