--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -53,7 +53,7 @@ jobs:
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_S3_ACCESS_SECRET }}
       run: |
           aws deploy create-deployment \
-          --application-name g-app \
+          --application-name g-app-deploy \
           --deployment-group-name g-app-deploy \
           --file-exists-behavior OVERWRITE \
           --s3-location bucket=g-app,bundleType=zip,key=g-app-build.zip \
