--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -35,10 +35,18 @@ jobs:
       run: mkdir -p deploy/g-app
     # Copy jar file
     - name: Copy jar
-      run: cp ./application/g-app-application/build/libs/*.jar ./deploy/g-app
+      run: cp ./application/g-app-application/build/libs/*.jar ./deploy/
+    # Copy appspec.yml
+    - name: Copy appspec
+      run: cp ./appspec.yml ./deploy/
+      
+    # script file Copy
+    - name: Copy shell
+      run: cp ./scripts/* ./deploy/
+    
     # Make Zip file
     - name: Make zip file
-      run: zip -r -qq -j ./g-app-build.zip ./deploy/g-app
+      run: zip -r -qq -j ./g-app-build.zip ./deploy/
     # Deliver
     - name: Deliver to AWS S3
       env: 
