admin 설정 적용 app 회원가입, 로그인, 회원정보 조회 기능 추가

--- a/application/build.gradle
+++ b/application/build.gradle
@@ -8,3 +8,9 @@ version '1.0-SNAPSHOT'
 bootJar {
     enabled = false
 }
+
+subprojects {
+    dependencies {
+        implementation project(':modules:g-app-common') // common
+    }
+}
