--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -18,5 +18,9 @@ subprojects {
     jar {
         enabled = true
     }
+    dependencies {
+        implementation project(':modules:g-app-common') // common
+        implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.4'
+    }
 }
 
