--- a/client/build.gradle
+++ b/client/build.gradle
@@ -18,4 +18,7 @@ subprojects {
     jar {
         enabled = true
     }
+    dependencies {
+        implementation project(':modules:g-app-common') // common
+    }
 }
