--- a/modules/g-app-token-util/build.gradle
+++ b/modules/g-app-token-util/build.gradle
@@ -16,6 +16,7 @@ dependencies {
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+    implementation project(':modules:g-app-common') // common
 }
 
 test {
