--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -26,10 +26,10 @@ jobs:
         java-version: '11'
         distribution: 'adopt'
     # Build
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
     - name: Build with Gradle
-      uses: gradle/gradle-build-action@4137be6a8bf7d7133955359dbd952c0ca73b1021
-      with:
-        arguments: build
+      run: ./gradlew g-app-application:build
     # Make deploy directory
     - name: Make Directory for deliver
       run: mkdir -p deploy/g-app
