--- a/.github/workflows/admin-gradle.yml
+++ b/.github/workflows/admin-gradle.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
-      run: ./gradlew application:g-admin-application:build
+      run: ./gradlew :application:g-admin-applicaion:build
     # Make deploy directory
     - name: Make Directory for deliver
       run: mkdir -p deploy/g-admin
