어드민 로그인 로그아웃 추가

--- a/settings.gradle
+++ b/settings.gradle
@@ -8,6 +8,8 @@ include 'modules:g-app-exception-handler'
 findProject(':modules:g-app-exception-handler')?.name = 'g-app-exception-handler'
 include 'client:g-app-core-web'
 findProject(':client:g-app-core-web')?.name = 'g-app-core-web'
+include 'client:g-admin-core-web'
+findProject(':client:g-app-admin-web')?.name = 'g-app-admin-web'
 include 'domain:g-app-domain'
 findProject(':domain:g-app-domain')?.name = 'g-app-domain'
 include 'domain:g-app-auth-domain'
