--- a/domain/g-app-auth-domain/build.gradle
+++ b/domain/g-app-auth-domain/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation project(':modules:g-app-token-util')
+    implementation project(':modules:g-app-common') // common
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
 }
