--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -9,9 +9,9 @@ name: g-app
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master-api ]
   pull_request:
-    branches: [ master ]
+    branches: [ master-api ]
 
 jobs:
   build:
@@ -29,7 +29,7 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
-      run: ./gradlew application:g-app-application:build
+      run: ./gradlew :application:g-app-application:build
     # Make deploy directory
     - name: Make Directory for deliver
       run: mkdir -p deploy/g-app
