--- a/application/g-app-application/appspec.yml
+++ b/application/g-app-application/appspec.yml
@@ -2,7 +2,7 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /admin/deploy
+    destination: /app/deploy
 
 permissions:
   - object: /
