--- a/application/g-app-application/src/main/resources/application-local.yml
+++ b/application/g-app-application/src/main/resources/application-local.yml
@@ -11,7 +11,7 @@ spring:
     generate-ddl: true
     show-sql: true
     hibernate:
-      ddl-auto: create-drop # update create-drop
+      ddl-auto: update # update create-drop create
     properties:
       hibernate:
         format_sql: true
