add userlist total

--- a/settings.gradle
+++ b/settings.gradle
@@ -24,4 +24,6 @@ include 'modules:g-app-common'
 findProject(':modules:g-app-common')?.name = 'g-app-common'
 include 'client:g-admin-core-web'
 findProject(':client:g-admin-core-web')?.name = 'g-admin-core-web'
+include 'client:aws-client'
+findProject(':client:aws-client')?.name = 'aws-client'
 
