--- a/application/g-admin-applicaion/src/main/resources/application-prod.yml
+++ b/application/g-admin-applicaion/src/main/resources/application-prod.yml
@@ -10,7 +10,7 @@ spring:
     generate-ddl: true
     show-sql: true
     hibernate:
-      ddl-auto: update # update create-drop
+      ddl-auto: create # update create-drop
     properties:
       hibernate:
         format_sql: true
