--- a/domain/g-app-domain/build.gradle
+++ b/domain/g-app-domain/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
     implementation project(':modules:g-app-token-util')
+    implementation project(':modules:g-app-common') // common
 }
 
 test {
