--- a/application/g-admin-applicaion/src/main/resources/application-local.yml
+++ b/application/g-admin-applicaion/src/main/resources/application-local.yml
@@ -16,7 +16,7 @@ spring:
     generate-ddl: true
     show-sql: true
     hibernate:
-      ddl-auto: update # update create-drop create
+      ddl-auto: update # update create-drop create validate
     properties:
       hibernate:
         format_sql: true
