관리자: 계정검색, 계정상세 브랜드상세, 브랜드업데이트 브랜드이미지교체 추가

--- a/application/g-admin-applicaion/src/main/resources/application-local.yml
+++ b/application/g-admin-applicaion/src/main/resources/application-local.yml
@@ -48,8 +48,10 @@ cloud:
     s3:
       bucket: g-app-resource
       directory: local
+      cloudfront-url: 'https://d3b7cshusafhca.cloudfront.net/'
+      brand-dir: 'local/brand'
+      default-image-url: 'https://d3b7cshusafhca.cloudfront.net/local/default/logo-default.png'
     region:
       static: ap-northeast-2
     stack:
       auto: false
-
