컨텐츠 기능 업데이트 크롤러 기능 연동

--- a/application/g-admin-applicaion/src/main/resources/application-prod.yml
+++ b/application/g-admin-applicaion/src/main/resources/application-prod.yml
@@ -45,6 +45,7 @@ cloud:
       cloudfront-url: 'https://d3b7cshusafhca.cloudfront.net/'
       brand-dir: 'prod/brand'
       default-image-url: 'https://d3b7cshusafhca.cloudfront.net/prod/default/logo-default.png'
+      content-dir: 'prod/content'
     region:
       static: ap-northeast-2
     stack:
