--- a/application/g-admin-applicaion/build.gradle
+++ b/application/g-admin-applicaion/build.gradle
@@ -14,7 +14,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation:2.6.2'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.6.2'
     implementation project(':client:g-admin-core-web') // web 설정, security 적용
-    implementation project(':client:aws-client') // web 설정, security 적용
+    implementation project(':client:aws-client') // aws 클라이언트 적용
+    implementation project(':client:scraper-client') // scraper 클라이언트 적용
     implementation project(':domain:g-app-domain')  // rdbms domain
     implementation project(':domain:g-app-auth-domain') // security 사용 domain
     implementation project(':modules:g-app-redis')
