--- a/application/g-admin-applicaion/src/main/resources/application-local.yml
+++ b/application/g-admin-applicaion/src/main/resources/application-local.yml
@@ -51,6 +51,7 @@ cloud:
       cloudfront-url: 'https://d3b7cshusafhca.cloudfront.net/'
       brand-dir: 'local/brand'
       default-image-url: 'https://d3b7cshusafhca.cloudfront.net/local/default/logo-default.png'
+      content-dir: 'local/content'
     region:
       static: ap-northeast-2
     stack:
