--- a/domain/g-app-domain/build.gradle
+++ b/domain/g-app-domain/build.gradle
@@ -16,6 +16,7 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
     implementation project(':modules:g-app-token-util')
     implementation project(':modules:g-app-common') // common
+    implementation 'com.google.code.gson:gson:2.8.9' // gson
 }
 
 test {
