cors 변경 크롤러모듈 수정 중

--- a/application/g-app-application/build.gradle
+++ b/application/g-app-application/build.gradle
@@ -20,6 +20,7 @@ dependencies {
     implementation project(':domain:g-app-auth-domain') // security 사용 domain
     implementation project(':modules:g-app-common') // common
     implementation project(':modules:g-app-redis')
+    implementation project(':modules:g-app-mail')
     implementation 'com.google.code.gson:gson:2.8.9' // gson
     implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.3.8'
 }
