--- a/application/g-app-application/src/main/resources/application-prod-blue.yml
+++ b/application/g-app-application/src/main/resources/application-prod-blue.yml
@@ -51,3 +51,17 @@ cloud:
     stack:
       auto: false
 
+mail:
+  host: smtp.gmail.com
+  port: 587
+  username: filunway@gmail.com
+  password: bbeylfxhlpxhwxbs
+  smtp:
+    auth: true
+    starttls: true
+    sslenable: true
+    ssltrust: smtp.gmail.com
+  protocol: smtp
+  debug: true
+  encoding: UTF-8
+
