--- a/application/g-app-application/src/main/resources/application-prod-green.yml
+++ b/application/g-app-application/src/main/resources/application-prod-green.yml
@@ -10,7 +10,7 @@ spring:
     generate-ddl: true
     show-sql: true
     hibernate:
-      ddl-auto: create-drop # update create-drop
+      ddl-auto: update # update create-drop
     properties:
       hibernate:
         format_sql: true
