--- a/modules/g-app-common/build.gradle
+++ b/modules/g-app-common/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+    implementation 'com.google.code.gson:gson:2.8.9' // gson
 }
 
 test {
