--- a/application/g-app-application/src/main/resources/application-prod-green.yml
+++ b/application/g-app-application/src/main/resources/application-prod-green.yml
@@ -1,9 +1,9 @@
 server:
-  port: 8081
+  port: 8082
 spring:
   config:
     activate:
-      on-profile: prod-blue # 환경이름설정
+      on-profile: prod-green # 환경이름설정
   jpa:
     database: mysql
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
@@ -18,7 +18,7 @@ spring:
   datasource:
     url: 'jdbc:mysql://localhost:3306/gproject?serverTimezone=Asia/Seoul&characterEncoding=UTF-8'
     username: root
-    password: Gapp123!
+    password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   redis:
@@ -46,7 +46,7 @@ cloud:
       secretKey: ++AnjnmYXBYmPtNZa15g40/nGFbKiTNZBlz4L/2I
     s3:
       bucket: g-app-resource
-      directory: local
+      directory: prod
     cloudFront:
       default-dir: 'prod'
       url: 'https://d3b7cshusafhca.cloudfront.net/'
