--- a/application/g-app-application/src/main/resources/application-local-blue.yml
+++ b/application/g-app-application/src/main/resources/application-local-blue.yml
@@ -19,7 +19,7 @@ spring:
   datasource:
     url: 'jdbc:mysql://localhost:3306/gproject?serverTimezone=Asia/Seoul&characterEncoding=UTF-8'
     username: root
-    password: Gapp123!
+    password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   redis:
