--- a/application/g-app-application/src/main/resources/application-prod-green.yml
+++ b/application/g-app-application/src/main/resources/application-prod-green.yml
@@ -8,7 +8,7 @@ spring:
     database: mysql
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     generate-ddl: true
-    show-sql: true
+    show-sql: false
     hibernate:
       ddl-auto: update # update create-drop create
     properties:
