타인페이지 배경이미지 프로필이미지등록, 배경이미지등록 추가

--- a/application/g-app-application/src/main/resources/application-prod-blue.yml
+++ b/application/g-app-application/src/main/resources/application-prod-blue.yml
@@ -53,6 +53,7 @@ cloud:
       brand-dir: 'prod/brand'
       default-image-url: 'https://d3b7cshusafhca.cloudfront.net/prod/default/logo-default.png'
       content-dir: 'prod/content'
+      profile-dir: 'prod/profile'
     region:
       static: ap-northeast-2
     stack:
