--- a/client/aws-client/build.gradle
+++ b/client/aws-client/build.gradle
@@ -11,11 +11,16 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web:2.6.1'
+    implementation 'org.springframework:spring-test'
+    implementation group: 'com.drewnoakes', name: 'metadata-extractor', version: '2.6.2'
     implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.0.1.RELEASE'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+    implementation 'com.github.downgoon:marvin:1.5.5'
+    implementation 'com.github.downgoon:MarvinPlugins:1.5.5'
 }
 
 test {
     useJUnitPlatform()
 }
+
