--- a/domain/g-app-auth-domain/build.gradle
+++ b/domain/g-app-auth-domain/build.gradle
@@ -12,6 +12,7 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     implementation project(':modules:g-app-token-util')
     implementation project(':modules:g-app-common') // common
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
